chore: Rename Concierge iPad to Dashboard and fix Rep column source

--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
               <span style={{ fontSize: 20 }}>💼</span> Investor Runner
             </button>
             <button onClick={() => setView("concierge")} className="btn-splash-secondary">
-              <span style={{ fontSize: 20 }}>🖥️</span> Concierge iPad
+              <span style={{ fontSize: 20 }}>🖥️</span> Dashboard
+
             </button>
           </div>
           <a href="https://docs.google.com/spreadsheets/d/1ajTafy2t0VC0mUHPpS4ygHnG6uxfZxSauC_rDtPbqEQ/edit" target="_blank" rel="noopener noreferrer" style={{ position: "absolute", bottom: 60, fontSize: 11, color: "rgba(255,255,255,0.15)", letterSpacing: "0.1em", textDecoration: "none", borderBottom: "1px solid rgba(255,255,255,0.08)", paddingBottom: 2 }}>
@@ -502,7 +503,7 @@
           <nav className="runner-nav">
             <button onClick={() => setView("concierge")} className="nav-item" title="Switch to Concierge">
               <span style={{ fontSize: 20 }}>🖥️</span>
-              <span style={{ fontSize: 10, fontWeight: 600, marginTop: 2 }}>iPad View</span>
+              <span style={{ fontSize: 10, fontWeight: 600, marginTop: 2 }}>Dashboard</span>
             </button>
             <div className="nav-item nav-item-active">
               <span style={{ fontSize: 20 }}>📋</span>
@@ -769,7 +770,7 @@
           <nav className="runner-nav" style={{ background: "rgba(13,17,24,0.85)" }}>
             <button onClick={() => setView("concierge")} className="nav-item">
               <span style={{ fontSize: 20 }}>🖥️</span>
-              <span style={{ fontSize: 10, fontWeight: 600, marginTop: 2 }}>iPad View</span>
+              <span style={{ fontSize: 10, fontWeight: 600, marginTop: 2 }}>Dashboard</span>
             </button>
             <div className="nav-item nav-item-active" style={{ color: "#818cf8" }}>
               <span style={{ fontSize: 20 }}>💼</span>
@@ -1164,7 +1165,7 @@
               <div className="concierge-icon">🦢</div>
               <div>
                 <h1 style={{ fontSize: 20, fontWeight: 800, color: "#fff", lineHeight: 1.1, letterSpacing: "-0.02em" }}>BluSwan 2026</h1>
-                <p style={{ fontSize: 10, color: "rgba(255,255,255,0.3)", fontWeight: 600, textTransform: "uppercase", letterSpacing: "0.15em", marginTop: 2 }}>Concierge · LP-AGM Speed Dating</p>
+                <p style={{ fontSize: 10, color: "rgba(255,255,255,0.3)", fontWeight: 600, textTransform: "uppercase", letterSpacing: "0.15em", marginTop: 2 }}>Dashboard · LP-AGM Speed Dating</p>
               </div>
             </div>
             <div style={{ display: "flex", flexDirection: "column", alignItems: "center", position: "absolute", left: "50%", transform: "translateX(-50%)", top: 10 }}>
@@ -1242,7 +1243,7 @@
           <footer className="concierge-footer">
             <div style={{ display: "flex", gap: 16, fontSize: 10, color: "rgba(255,255,255,0.15)", fontWeight: 500 }}>
               <span style={{ display: "flex", alignItems: "center", gap: 4 }}><div style={{ width: 5, height: 5, borderRadius: "50%", background: "#2ecc70" }} /> System Online</span>
-              <span>iPad Pro · Concierge Desk</span>
+              <span>Dashboard · Concierge Desk</span>
             </div>
             <a href="https://docs.google.com/spreadsheets/d/1yU6EOR2vNjKqa7gZ274ZCqcCuhsh7tVm/edit" target="_blank" rel="noopener noreferrer" style={{ fontSize: 10, color: "rgba(255,255,255,0.12)", textDecoration: "none" }}>📊 Source Sheet</a>
           </footer>
