fix: Map correct investor images

--- a/index.html
+++ b/index.html
@@ -90,15 +90,16 @@
     const ENABLE_INVESTOR_IMAGES = true; // Set to false to revert UI instantly
 
     // Mapping Rep Name -> Image File
-    // Based on Investors.docx analysis
+    // Verified via debug_images.html
     const INVESTOR_IMAGES = {
+      // Confirmed Mappings
       "Gaurav Jain": "assets/investors/image1.webp",
       "Shalabh Tandon": "assets/investors/image2.webp",
       "Treasa Mathew": "assets/investors/image3.webp",
       "Gordon Chan": "assets/investors/image4.webp",
       "Ali Abdulhussain": "assets/investors/image5.webp",
       "Mahmoud Al Khatri": "assets/investors/image6.webp",
-      "Khor Boon How": "assets/investors/image7.webp", // Doc: Boon How Khor
+      "Khor Boon How": "assets/investors/image7.webp",
       "Boon How Khor": "assets/investors/image7.webp",
       "Sam CHEN": "assets/investors/image8.webp",
       "Ankit Agarwal": "assets/investors/image9.webp",
@@ -115,7 +116,8 @@
       "Abhishek Shukla": "assets/investors/image20.webp",
       "Kiran": "assets/investors/image21.webp",
       "Nitin Agarwal": "assets/investors/image22.webp",
-      // New reps from script (placeholders or re-use if possible)
+
+      // Unmapped / No Image Available in Doc
       "Ashok": null,
       "Asad": null,
       "Mandeep": null,
